@@ -1466,6 +1466,8 @@ check_edepwebalizer=Webalizer cannot be enabled in Virtualmin's <a href='$1'>mod
 check_edepssl=SSL cannot be enabled in Virtualmin's <a href='$1'>module configuration</a> unless Apache is.
 check_eshell=Shell $1 for non-FTP users is included in $2, which may allow FTP access.
 check_eftpshell=Shell $1 for FTP users is not included in $2, which may prevent FTP access.
+check_enscd=Warning - the name service caching daemon (NSCD) is running on your system. This may prevent Virtualmin from properly creating new Unix users and groups.
+check_enscd2=You can disable NSCD in the <a href='$1'>Bootup and Shutdown Actions</a> module.
 check_allwebmin=Updating all Webmin users with new settings..
 check_allresel=Updating all resellers with new settings..
 check_needupdate=Some of the module configuration settings that effect which modules Webmin users have access to have changed. Click the button below to update all users with the new permissions.
